--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
   "require": {
     "php": ">=7.0",
     "php-amqplib/php-amqplib": "2.*",
-    "illuminate/support": "v5.5.28"
+    "illuminate/support": ">=5.5"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0",
